--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <img src="assets/img/my-profile-img.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>Web Developer &nbsp; Machine Learning engineer</h2>
+            <h2>Web Developer & Machine Learning engineer</h2>
             <p class="fst-italic py-3">
             Proficient in building responsive web applications with modern technologies while leveraging machine learning to develop predictive models and data-driven solutions, ensuring seamless user experiences and optimized performance.
             </p>
@@ -432,7 +432,7 @@
                         <h4>${item.title}</h4>
                         <p>${item.desc}</p>
                         <a href="${item.img.main}" title="${item.title}" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                        <a href="portfolio-details.html?id=${item.index}" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                        <a href="portfolio-details.html?id=${index}" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                       </div>
                     </div>
                   </div><!-- End Portfolio Item -->
